# cell-period-estimator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cell_period_estimator/: __init__.py  __main__.py
cell_period_estimator/core/: __init__.py  period_core.py  stacking.py
cell_period_estimator/ui/: __init__.py  main_window.py  theme.py  widgets.py
tests/: test_synthetic.py
