[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-period-estimator"
version = "0.1.0"
description = "PySide6 desktop tool to estimate the repeating cell period (Golden Cell pitch) of semiconductor EBeam scan images."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["semiconductor", "ebeam", "metrology", "period", "golden-cell", "defect-detection"]
dependencies = [
    "PySide6>=6.5",
    "opencv-python>=4.7",
    "numpy>=1.23",
]

[project.scripts]
cell-period-estimator = "cell_period_estimator.__main__:main"

[tool.setuptools.packages.find]
include = ["cell_period_estimator*"]
